Validar segundo escenario y listar los siguientes